--- a/Android/StockPortfolio/res/anim/slide_right.xml
+++ b/Android/StockPortfolio/res/anim/slide_right.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">  
-    <translate android:toXDelta="4500" android:toYDelta="00" android:duration="1000"/>
+    <translate android:interpolator="@android:anim/anticipate_interpolator"
+        android:toXDelta="4500" 
+        android:toYDelta="00" 
+        android:duration="1000"/>
+    
+  
 </set>
